jvm study